kubernetes/02-deployment/05-deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uday-app
  namespace: uday-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uday
  template:
    metadata:
      labels:
        app: uday
    spec:
      containers:
        - name: uday
          image: udaytc/uday-app:v7
          ports:
            - containerPort: 5000
