kubernetes/02-deployment/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uday-app
  namespace: uday-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uday
  template:
    metadata:
      labels:
        app: uday
    spec:
      containers:
        - name: uday
          image: udaytc/uday-app:v1 # substitua pela sua imagem real
          ports:
            - containerPort: 5000
---

apiVersion: v1
kind: Service
metadata:
  name: uday-service
  namespace: uday-app
spec:
  selector:
    app: uday
  ports:
    - port: 5000
      targetPort: 5000
