kubernetes/02-deployment/07-service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: uday-app-service
  namespace: uday-app
spec:
  selector:
    app: uday-app
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
