kubernetes/02-deployment/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uday-app-ingress
  namespace: uday-app
spec:
  ingressClassName: nginx
  rules:
    - host: uday-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uday-service
                port:
                  number: 5000
